update responsive design

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="relative mt-[50px] sm:relative">
           <img class="" src="./images/Group 1000000916.png" alt="" />
           <div
-            class="w-[210px] h-[80px] bg-white flex pt-1 pb-1 pl-2 pr-2 items-center gap-1 rounded-lg absolute bottom-1 right-[180px] sm:w-[250px] sm:h-[100px] sm:absolule sm:right-[290px] box-shadows"
+            class="w-[210px] h-[80px] bg-white flex pt-1 pb-1 pl-2 pr-2 items-center gap-1 rounded-lg absolute translate-x-2/4 translate-y-2/4 bottom-[10px] right-[250px] sm:w-[250px] sm:h-[100px] sm:absolule sm:translate-x-2/4 sm:translate-y-2/4 sm:right-[390px] sm:bottom-[50px] box-shadows"
           >
             <div>
               <img class="w-[48px]" src="./images/Group 5.png" alt="" />
@@ -142,7 +142,7 @@
       >
         <!---tea images-->
         <div class="grid grid-cols-1 gap-4 sm:flex sm:flex-row">
-          <div class="sm:flex sm:flex-col sm:gap-4">
+          <div class="flex flex-col gap-4 sm:flex sm:flex-col sm:gap-4">
             <div
               class="sm:w-[238px] w-full h-[136px] rounded-[10px] mx-auto bg-gradient-to-r from-[#ffe5e5] to-[#fffdfc]"
             ></div>
@@ -152,7 +152,7 @@
               <img src="./images/fresh-2.png" alt="" />
             </div>
           </div>
-          <div class="sm:flex sm:flex-col sm:gap-4">
+          <div class="flex flex-col gap-4 sm:flex sm:flex-col sm:gap-4">
             <div
               class="sm:h-3/4 bg-[#FCF6E9] p-[45px] rounded-[10px] sm:w-[238px] w-full flex flex-col justify-center items-center"
             >
@@ -462,11 +462,11 @@
             </h3>
             <div class="flex gap-5 w-full">
               <input
-                class="w-full border-b-2 border-[#494949] pb-5"
+                class="w-full border-b-2 border-[#494949] pb-5 pt-5 rounded-[10px] text-xl text-[#494949] font-medium"
                 type="Email"
                 placeholder="Email address"
               />
-              <img class="mb-5" src="./images/Group 3981.png" alt="" />
+              <img class="mb-5 mt-5" src="./images/Group 3981.png" alt="" />
             </div>
             <div class="mt-5 flex gap-5">
               <i class="fa-brands fa-facebook text-2xl"></i>
